frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: anshuhtwt/frontend
        name: frontend
        ports:
        - containerPort: 8080
          name: fport
      restartPolicy: Always
